--- a/examples/occa/jacobi/makefile
+++ b/examples/occa/jacobi/makefile
@@ -15,6 +15,10 @@ executables: main
 main: $(objects) $(headers) main.cpp
 	$(compiler) $(compilerFlags) -o main $(flags) $(objects) main.cpp $(paths) $(links)
 
+
+mainV2: $(objects) $(headers) mainV2.cpp
+	$(compiler) $(compilerFlags) -o mainV2 $(flags) $(objects) mainV2.cpp $(paths) $(links)
+
 $(oPath)/%.o:$(sPath)/%.cpp $(wildcard $(subst $(sPath)/,$(iPath)/,$(<:.cpp=.hpp))) $(wildcard $(subst $(sPath)/,$(iPath)/,$(<:.cpp=.tpp)))
 	$(compiler) $(compilerFlags) -o $@ $(flags) -c $(paths) $<
 
