--- a/examples/occa/simple/makefile
+++ b/examples/occa/simple/makefile
@@ -15,10 +15,13 @@ executables: simple
 simple: $(objects) $(headers) simple.cpp
 	$(compiler) $(compilerFlags) -o simple $(flags) $(objects) simple.cpp $(paths) $(links)
 
+simpleV2: $(objects) $(headers) simpleV2.cpp
+	$(compiler) $(compilerFlags) -o simpleV2 $(flags) $(objects) simpleV2.cpp $(paths) $(links)
+
 $(oPath)/%.o:$(sPath)/%.cpp $(wildcard $(subst $(sPath)/,$(iPath)/,$(<:.cpp=.hpp))) $(wildcard $(subst $(sPath)/,$(iPath)/,$(<:.cpp=.tpp)))
 	$(compiler) $(compilerFlags) -o $@ $(flags) -c $(paths) $<
 
 clean:
 	rm -f $(oPath)/*;
-	rm -f simple;
+	rm -f simpleV2 simple;
 #=================================================
